[package]
name = "ina226"
version = "0.1.1"
edition = "2021"
authors = [
    "Justin Latimer <justinlatimer@gmail.com>",
]
description = "Driver for INA226 I2C voltage/current/power monitor"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/justinlatimer/ina226"

[dependencies]
bitflags = "1.3"
byteorder = { version = "1", default-features = false }
embedded-hal = "0.2"

[dev-dependencies]
approx = "0.5"
embedded-hal-mock = "0.8"
