[package]
name = "ina226"
version = "0.2.0"
edition = "2021"
authors = [
    "Justin Latimer <justinlatimer@gmail.com>",
]
description = "Driver for INA226 I2C voltage/current/power monitor"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/justinlatimer/ina226"

[dependencies]
bitflags = "2.4"
byteorder = { version = "1", default-features = false }
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async-cfg = "0.2.3"

[dev-dependencies]
approx = "0.5"
embedded-hal-mock = "0.10"

[features]
async = ["dep:embedded-hal-async"]
